--- a/index.html
+++ b/index.html
@@ -9,24 +9,16 @@
 </head>
 
 <body>
-
-  <div id="button">START</div>
-
-<div class="eyes">
-  <div class="eye" id="lefteye">
-    <div class="cover1" id="leftcover1"></div>
-    <div class="cover2" id="leftcover2"></div>
-    <div class="pupil" id="leftpupil"></div>
-  </div>
-
-  <div class="eye" id="righteye">
-    <div class="cover1" id="rightcover1"></div>
-    <div class="cover2" id="rightcover2"></div>
-    <div class="pupil" id="rightpupil"></div>
-  </div>
-  
-  <div id="lip">v</div>
+ <div id="gameContainer">
+  <div id="titleContainer">
+ <a href="choosepage.html"><img src="./image/blink_title.svg" alt="title" id="title"></a>
+  <img src="./image/play_ment.svg" alt="play_ment" id="play_ment">
 </div>
+    <div class="eyes">
+      <img src="./image/Group_10.svg" alt="left eye" class="eye">
+      <img src="./image/Group_10.svg" alt="right eye" class="eye">
+    </div>
+  </div>
 
 
     <script type="module" src="./src/main.js"></script>
