--- a/choosepage.html
+++ b/choosepage.html
@@ -10,12 +10,40 @@
 
 <body>
  <div id="gameContainer">
-<img src="./image/choose_ment.svg" alt="title" id="choose_ment">
+<img src="./image/choose_page/choose_ment.svg" alt="title" id="choose_ment">
     <div id="chooseContainer">
-    <a href="mad.html"><img src="./image/choose_mad.svg" alt="title" id="choose_mad"></a>
-    <a href="love.html"><img src="./image/choose_love.svg" alt="title" id="choose_love"></a>
-   <a href="sad.html"><img src="./image/choose_sad.svg" alt="title" id="choose_sad"></a>
+
+  <a href="crazy.html" class="choice-link">
+    <div class="eye-wrap">
+      <div class="eye-mask eye-mask--green">
+        <img src="./image/choose_page/choose_crazy.svg" alt="crazy" class="eye-base">
+        <img src="./image/choose_page/choose_green_eyecover_up.svg" alt="" class="eyelid eyelid-up">
+        <img src="./image/choose_page/choose_green_eyecover_down.svg" alt="" class="eyelid eyelid-down">
+      </div>
     </div>
+  </a>
+
+  <a href="love.html" class="choice-link">
+    <div class="eye-wrap">
+      <div class="eye-mask eye-mask--pink">
+        <img src="./image/choose_page/choose_love.svg" alt="love" class="eye-base">
+        <img src="./image/choose_page/choose_pink_eyecover_up.svg" alt="" class="eyelid eyelid-up">
+        <img src="./image/choose_page/choose_pink_eyecover_down.svg" alt="" class="eyelid eyelid-down">
+      </div>
+    </div>
+  </a>
+
+  <a href="sad.html" class="choice-link">
+    <div class="eye-wrap">
+      <div class="eye-mask eye-mask--blue">
+        <img src="./image/choose_page/choose_sad.svg" alt="sad" class="eye-base">
+        <img src="./image/choose_page/choose_blue_eyecover_up.svg" alt="" class="eyelid eyelid-up">
+        <img src="./image/choose_page/choose_blue_eyecover_down.svg" alt="" class="eyelid eyelid-down">
+      </div>
+    </div>
+  </a>
+</div>
+
 </div>
     <script type="module" src="./src/main.js"></script>
 </body>
