--- a/index.html
+++ b/index.html
@@ -11,14 +11,26 @@
 <body>
  <div id="gameContainer">
   <div id="titleContainer">
- <a href="choosepage.html"><img src="./image/blink_title.svg" alt="title" id="title"></a>
-  <img src="./image/play_ment.svg" alt="play_ment" id="play_ment">
+ <a href="choosepage.html"><img src="./image/opening_page/blink_title.svg" alt="title" id="title"></a>
+  <img src="./image/opening_page/play_ment.svg" alt="play_ment" id="play_ment">
 </div>
     <div class="eyes">
-      <img src="./image/Group_10.svg" alt="left eye" class="eye">
-      <img src="./image/Group_10.svg" alt="right eye" class="eye">
+      <div class="eye-wrap">
+        <div class="eye-mask">
+          <img src="./image/Group_10.svg" alt="left eye" class="eye">
+          <img src="./image/opening_page/eyecover_up.svg" alt="" class="eyelid eyelid-up">
+          <img src="./image/opening_page/eyecover_down.svg" alt="" class="eyelid eyelid-down">
+        </div>
+      </div>
+
+  <div class="eye-wrap">
+    <div class="eye-mask">
+    <img src="./image/Group_10.svg" alt="right eye" class="eye">
+    <img src="./image/opening_page/eyecover_up.svg" alt="" class="eyelid eyelid-up">
+    <img src="./image/opening_page/eyecover_down.svg" alt="" class="eyelid eyelid-down">
     </div>
   </div>
+</div>
 
 
     <script type="module" src="./src/main.js"></script>
