--- a/love.html
+++ b/love.html
@@ -13,10 +13,7 @@
     <img src="./image/love/love_title.svg"
       alt="love_title" id="title">
 
-    <div
-      class="eyes"
-
-    >
+    <div class="eyes">
       <div class="eye-wrap">
         <div class="eye-mask">
           <img src="./image/love/white_shape.svg" alt="left" class="eye eye-white">
