--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="eyes">
       <div class="eye-wrap">
         <div class="eye-mask">
-          <img src="./image/opening.png" alt="left eye" class="eye">
+          <img src="./image/opening_page/opening_small.png" alt="left eye" class="eye">
           <img src="./image/opening_page/eyecover_up.svg" alt="" class="eyelid eyelid-up">
           <img src="./image/opening_page/eyecover_down.svg" alt="" class="eyelid eyelid-down">
         </div>
@@ -25,7 +25,7 @@
 
   <div class="eye-wrap">
     <div class="eye-mask">
-    <img src="./image/opening.png" alt="right eye" class="eye">
+    <img src="./image/opening_page/opening_small.png" alt="right eye" class="eye">
     <img src="./image/opening_page/eyecover_up.svg" alt="" class="eyelid eyelid-up">
     <img src="./image/opening_page/eyecover_down.svg" alt="" class="eyelid eyelid-down">
     </div>
